syntax = "proto3";

package app.miniboard.users.sources.api.v1;

import "google/api/annotations.proto";

option go_package = "sources";

service SourcesService {
    // Create source
    //
    // Allows to create a new source for a user.
    rpc CreateSource(CreateSourceRequest) returns (Source) {
        option (google.api.http) = {
            post: "/api/v1/users/articles"
            body: 'source'
        };
    }
}

message CreateSourceRequest {
    // Source to create.
    Source source = 2;
}

message Source {
    // Name of the source. For example "users/<id>/sources/<1>"
    string name = 1;

    string url = 2;
}
